# arkey-web

./: .gitignore  .npmignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  package-lock.json  package.json
LICENSES/: MIT.txt  PolyForm-Noncommercial-1.0.0.txt
apps/ArkeyWeb/src-tauri/: Cargo.toml  tauri.conf.json
apps/ArkeyWeb/src-tauri/capabilities/: main.json
apps/ArkeyWeb/src-tauri/icons/: icon.icns
apps/ArkeyWeb/src-tauri/src/: bridge.rs  codex_focus.rs  http_server.rs  lib.rs  main.rs  settings.rs  window.rs
docs/: ARCHITECTURE.md  CODEX_MICRO_ESP32S3_LAB.md  CODEX_MICRO_LAB.md  CONTRIBUTING.md  FIRMWARE.md  PORTING_QMK.md  SECURITY.md  WEB_CONSOLE.md
firmware/: UPSTREAM.md  codex-micro-lab-q6-pro.patch  codex-micro-lab-qmk-encoder.patch  codex-micro-lab-qmk-hid.patch  keychron-q6-pro.patch
profiles/: effects-schema.json  effects-v1.json  keychron-q6-pro-ansi.json  schema.json
scripts/: audit-release.sh  build-codex-micro-esp32s3-lab.sh  build-codex-micro-lab-q6-pro.sh  build-codex-micro-virtual-lab.sh  build-macos-app.sh  build-q6-pro.sh  check-codex-app-server.sh  check-command-surface.sh  codex-micro-lab-bindings.mjs  codex-micro-lab-config.mjs  generate-firmware-contract.mjs  run-codex-micro-virtual-lab.command  test-codex-micro-esp32s3-protocol.sh
src/: appserver.ts  cli.ts  contracts.ts  effects.ts  install.ts  microbridge.ts  profile.ts  protocol.ts  runtime.ts  store.ts  transport.ts  webserver.ts
test/: appserver.test.ts  codex-micro-esp32s3-lab.test.ts  codex-micro-lab.test.ts  (+10 more)
(+54 files in other folders)
