[package]
name = "arkey-desktop"
version = "0.2.0"
description = "Tauri desktop control surface for the Arkey ESP32-S3 hardware lab"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"

[lib]
name = "arkey_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.8"
open = "5"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.9"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["net", "rt", "sync", "time"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
libc = "0.2"
objc2-app-kit = { version = "0.3", default-features = false, features = ["std", "libc", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSArray", "NSString"] }
